HelloUltraviolet/Fixtures/RejectedSource/Procedures/RecordMethodCallArgumentType/Source/Main.uv
//! Rejected record-method specimen for argument checking in method calls.

public record MethodCallOwner {
    public value: i32

    public procedure add(~, amount: i32) -> i32 {
        return self.value + amount
    }
}

public procedure recordMethodCallArgumentTypeReference() -> () {
    let owner: MethodCallOwner = MethodCallOwner { value: 3 }
    owner~>add(true)
}
